Changed project structure a bit (intellij only). Implemented email alerts to site email

--- a/ManagedWifi/app/templates/AccessPoint.html
+++ b/ManagedWifi/app/templates/AccessPoint.html
@@ -171,16 +171,16 @@
                             <p>The following information reports on the activity, over the radio, from the device to users.</p>
                             <dl class="dl-horizontal">
                                 <dt>Channel</dt>
-                                <dd>{{original['ng-channel']}}</dd>
+                                <dd>{{original['ng-channel']}}&nbsp;</dd>
 
                                 <dt>Transmit Power</dt>
                                 <dd>{{original['ng-tx_power']}} dBm (EIRP)</dd>
 
                                 <dt>TX Pkts / Bytes</dt>
-                                <dd>{{original.stat.tx_packets | pktsBytes}} / {{original.stat.tx_bytes | pktsBytes}}</dd>
+                                <dd>{{original.stat.tx_packets | pktsBytes}} / {{original.stat.tx_bytes | pktsBytes}}&nbsp;</dd>
 
                                 <dt>RX Pkts / Bytes</dt>
-                                <dd>{{original.stat.rx_packets | pktsBytes}} / {{original.stat.rx_bytes | pktsBytes}}</dd>
+                                <dd>{{original.stat.rx_packets | pktsBytes}} / {{original.stat.rx_bytes | pktsBytes}}&nbsp;</dd>
 
                                 <dt># of Users</dt>
                                 <dd>{{original.user_num_sta}}</dd>
