--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -1,8 +1,8 @@
 <div class="row-fluid page-title">
     <div class="span12">
         <h1 class="content-title">Manage Access Point Devices</h1>
-        <ul class="breadcrumb">
-            <li class="active"><a href="#">Access Point Devices</a></li>
+        <ul class="crumbs">
+            <li><a style="cursor:pointer;">Access Point Devices</a></li>
         </ul>
     </div>
 </div>
