--- a/web/src/main/webapp/templates/Help.html
+++ b/web/src/main/webapp/templates/Help.html
@@ -1,9 +1,9 @@
 <div class="row-fluid page-title">
     <div class="span12">
         <h1 class="content-title">WiFi Help</h1>
-        <ul class="breadcrumb">
-            <li><a href="#/">Devices</a><span class="divider">/</span></li>
-            <li class="active"><a href="#">Help</a></li>
+        <ul class="crumbs">
+            <li><a href="#/">Devices</a></li>
+            <li><a style="cursor:pointer;">Help</a></li>
         </ul>
     </div>
 </div>
@@ -14,7 +14,7 @@
             <li><a ng-click="setActiveItem('Overview')" ng-class="itemClass('Overview')"><i class="icon-asterisk"></i>Overview</a></li>
             <li><a ng-click="setActiveItem('Devices')" ng-class="itemClass('Devices')"><i class="icon-asterisk"></i>Devices</a></li>
             <li><a ng-click="setActiveItem('Networks')" ng-class="itemClass('Networks')"><i class="icon-asterisk"></i>Networks</a></li>
-            <li><a ng-click="setActiveItem('Users')" ng-class="itemClass('Users')"><i class="icon-asterisk"></i>Users</a></li>
+            <li><a ng-click="setActiveItem('Users')" ng-class="itemClass('Users')"><i class="icon-asterisk"></i>Connected Devices</a></li>
             <li><a ng-click="setActiveItem('Reports')" ng-class="itemClass('Reports')"><i class="icon-asterisk"></i>Reports</a></li>
         </ul>
         <div class="content-pane multi">
