--- a/web/src/main/webapp/templates/User.html
+++ b/web/src/main/webapp/templates/User.html
@@ -1,9 +1,9 @@
 <div class="row-fluid page-title">
     <div class="span12">
         <h1 class="content-title">User Details for {{original.mac}}</h1>
-        <ul class="breadcrumb">
-            <li><a href="#/users">Device Users</a><span class="divider">/</span></li>
-            <li class="active"><a href="#">User Details for {{original.mac}}</a></li>
+        <ul class="crumbs">
+            <li><a href="#/users">Connected Devices</a></li>
+            <li><a style="cursor:pointer;">User Details for {{original.mac}}</a></li>
         </ul>
     </div>
 </div>
