--- a/web/src/main/webapp/css/managed-wifi.css
+++ b/web/src/main/webapp/css/managed-wifi.css
@@ -12,8 +12,136 @@ a, .icon-refresh {cursor: pointer}
 .dropdown-menu.filters li {padding: 3px 20px;}
 .notificationMessage {width: 280px;}
 .notificationMessage .icon-remove {cursor: pointer; padding: 5px; float: right; margin: -10px -26px 0 0}
-.form-submit-sticky {left:0}
 
 .control-label .section-help {cursor: pointer; color: #5299da; font-size: 13px; margin: 0 0 2px 0; display: inline; float: none}
 
 .dl-horizontal dt, .dl-horizontal dd {margin-bottom: 10px;}
+.zero-padding { padding: 0; box-shadow: none; background-color: #9cc92c; }
+
+.update-controls {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-top: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
+}
+.disabled-form {
+    color: lightgrey;
+}
+
+h1.content-title {
+    float: none !important;
+}
+.crumbs {
+    clear: both;
+    text-align: center;
+    list-style: none;
+    display: inline-table;
+    padding: 0;
+    margin: 0;
+    margin-top: 5px;
+}
+.crumbs li {
+    display: inline;
+}
+.crumbs li a {
+    display: block;
+    float: left;
+    height: 20px;
+    background: #9cc92c;
+    text-align: center;
+    padding: 0 10px 0 20px;
+    position: relative;
+    margin: 0 5px 0 0;
+    font-size: 13px;
+    text-decoration: none;
+    color: #fff;
+}
+.crumbs li a:after {
+    content: "";
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid #9cc92c;
+    position: absolute; right: -10px; top: 0;
+    z-index: 1;
+}
+.crumbs li a:before {
+    content: "";
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid white;
+    position: absolute; left: 0; top: 0;
+}
+.crumbs li:first-child a,.crumbs li.first a {
+    border-top-left-radius: 2px; border-bottom-left-radius: 2px;
+}
+.crumbs li:first-child a:before,.crumbs li.first a:before {
+    display: none;
+}
+.crumbs li:last-child a {
+    background: #7c9f23;
+    padding-right: 20px;
+    border-top-right-radius: 2px; border-bottom-right-radius: 2px;
+}
+.crumbs li:last-child a:after {
+    display: none;
+}
+.crumbs li a:hover {
+    background: #8cb427;
+}
+.crumbs li a:hover:after {
+    border-left-color: #8cb427;
+}
+
+.site-list {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px 0px;
+    padding-top: 0;
+    padding-bottom: 0;
+    border: none;
+}
+.site-list ul {
+    left: 0px;
+    line-height: 20px;
+    margin: 0px;
+    min-width: 160px;
+    overflow: auto;
+    padding: 5px 0px;
+    text-align: left;
+    width: 300px;
+    z-index: 1000;
+}
+.site-list ul li {
+    height: 80px;
+    line-height: 20px;
+    margin: 0px;
+    width: 300px;
+}
+.site-list ul li a {
+    color: rgb(51, 51, 51);
+    cursor: pointer;
+    display: block;
+    height: 60px;
+    line-height: 20px;
+    /*padding: 5px 10px;*/
+    padding: 10px;
+    white-space: nowrap;
+    width: 280px;
+}
+.site-list ul li a small {
+    color: #999
+}
+.site-list ul li a:hover {
+    background: #f9f9f9 none;
+    color: #333
+}
+
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
