--- a/web/src/main/webapp/templates/Site.html
+++ b/web/src/main/webapp/templates/Site.html
@@ -1,9 +1,9 @@
 <div class="row-fluid page-title">
     <div class="span12">
         <h1 class="content-title">Manage {{original.friendly_name}} </h1>
-        <ul class="breadcrumb">
-            <li><a href="#/sites">Sites</a><span class="divider">/</span></li>
-            <li class="active"><a href="#">Manage {{original.friendly_name}}</a></li>
+        <ul class="crumbs">
+            <li><a href="#/sites">Sites</a></li>
+            <li><a style="cursor:pointer;">Manage {{original.friendly_name}}</a></li>
         </ul>
     </div>
 </div>
@@ -86,10 +86,12 @@
 
                                 <div class="field-section" ng-show="activeItem=='Macs'">
                                     <div class="control-group">
-                                        <label for="macs" class="control-label">Assigned Device MACs</label>
+                                        <label for="macs" class="control-label">
+                                            Assigned Device MACs
+                                            <div class="tip help">provide each MAC address on a seperate line</div>
+                                        </label>
                                         <div class="controls">
                                             <textarea id="macs" placeholder="Provide a name..." ng-model="site.macs" rows="15"></textarea>
-                                            <div class="tip help">provide each MAC address on a seperate line</div>
                                         </div>
                                     </div>
                                 </div>
@@ -104,8 +106,8 @@
             </div>
         </div>
     </div>
-</div>
-<div class="form-submit-sticky" ng-show="isNew || isDirty()">
-    <button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="update()">{{isNew ? "Create" : "Update"}}</button>
-    <button class="btn btn-link clear-form" ng-hide="isNew" ng-click="reset()">Discard Changes</button>
+    <div class="update-controls" ng-show="isNew || isDirty()">
+        <button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="update()">{{isNew ? "Create" : "Update"}}</button>
+        <button class="btn btn-link clear-form" ng-hide="isNew" ng-click="reset()">Discard Changes</button>
+    </div>
 </div>
