--- a/web/src/main/webapp/templates/Users.html
+++ b/web/src/main/webapp/templates/Users.html
@@ -1,11 +1,11 @@
 <div class="row-fluid page-title">
     <div class="span12">
 
-        <h1 class="content-title">Manage Device Users <span ng-show="accessPoint">for {{accessPoint}}</span></h1>
-        <ul class="breadcrumb">
-            <li ng-show="accessPoint"><a href="#/devices">Access Point Devices</a><span class="divider">/</span></li>
-            <li ng-show="accessPoint"><a ng-href="#/device/{{apId}}">Manage {{accessPoint}}</a><span class="divider">/</span></li>
-            <li class="active"><a href="#">Device Users</a></li>
+        <h1 class="content-title">Manage Connected Devices<span ng-show="accessPoint">for {{accessPoint}}</span></h1>
+        <ul class="crumbs">
+            <li ng-show="accessPoint"><a href="#/devices">Access Point Devices</a></li>
+            <li ng-show="accessPoint"><a ng-href="#/device/{{apId}}">Manage {{accessPoint}}</a></li>
+            <li ng-class="{'first': !accessPoint}"><a style="cursor:pointer;">Connected Devices</a></li>
         </ul>
 
     </div>
